--- a/p8105_hw3_sef2183.md
+++ b/p8105_hw3_sef2183.md
@@ -19,25 +19,108 @@ data("instacart")
 
 ## Description of the dataset:
 
--   Size and structure of the data
--   Describe key variables
--   Illustrative examples of observations.
+-   This dataset contains 1384617 rows and 15 columns, with each row
+    resprenting a single product from an instacart order.
+-   Key variables include identifiers for user, order, and product; the
+    order in which each product was added to the cart. There are several
+    order-level variables, describing the day and time of the order, and
+    number of days since prior order. Then there are several
+    item-specific variables, describing the product name (e.g. Yogurt,
+    Avocado), department (e.g. dairy and eggs, produce), and aisle
+    (e.g. yogurt, fresh fruits), and whether the item has been ordered
+    by this user in the past.
+-   In total, there are 39123 products found in 131209 orders from
+    131209 distinct users.
 
-## Dataset questions (commenting on the results of each):
+## Dataset questions:
 
--   How many aisles are there, and which aisles are the most items
-    ordered from?
--   Make a plot that shows the number of items ordered in each aisle,
-    limiting this to aisles with more than 10000 items ordered.
--   Arrange aisles sensibly, and organize your plot so others can read
-    it.
--   Make a table showing the three most popular items in *each of the
-    aisles* “baking ingredients”, “dog food care”, and “packaged
-    vegetables fruits”. Include the number of times each item is ordered
-    in your table.
--   Make a table showing the mean hour of the day at which Pink Lady
-    Apples and Coffee Ice Cream are ordered on each day of the week;
-    format this table for human readers (i.e. produce a 2 x 7 table).
+Below is a table summarizing the number of items ordered from aisle. In
+total, there are 134 aisles, with fresh vegetables and fresh fruits
+holding the most items ordered by far:
+
+``` r
+instacart %>% 
+  count(aisle) %>% 
+  arrange(desc(n))
+## # A tibble: 134 × 2
+##    aisle                              n
+##    <chr>                          <int>
+##  1 fresh vegetables              150609
+##  2 fresh fruits                  150473
+##  3 packaged vegetables fruits     78493
+##  4 yogurt                         55240
+##  5 packaged cheese                41699
+##  6 water seltzer sparkling water  36617
+##  7 milk                           32644
+##  8 chips pretzels                 31269
+##  9 soy lactosefree                26240
+## 10 bread                          23635
+## # … with 124 more rows
+```
+
+Below is a plot that shows the number of items ordered in each aisle.
+Here, aisles are ordered by ascending number of items:
+
+``` r
+instacart %>% 
+  count(aisle) %>% 
+  filter(n > 10000) %>% 
+  mutate(aisle = fct_reorder(aisle, n)) %>% 
+  ggplot(aes(x = aisle, y = n)) + 
+  geom_point() + 
+  labs(title = "Number of items ordered in each aisle") +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+```
+
+![](p8105_hw3_sef2183_files/figure-gfm/problem%201%20aisle%20item%20count%20plot-1.png)<!-- -->
+
+Below is a table showing the three most popular items in aisles
+`baking ingredients`, `dog food care`, and `packaged vegetables fruits`,
+and includes the number of times each item is ordered:
+
+``` r
+instacart %>% 
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>%
+  group_by(aisle) %>% 
+  count(product_name) %>% 
+  mutate(rank = min_rank(desc(n))) %>% 
+  filter(rank < 4) %>% 
+  arrange(desc(n)) %>%
+  knitr::kable()
+```
+
+| aisle                      | product_name                                  |    n | rank |
+|:---------------------------|:----------------------------------------------|-----:|-----:|
+| packaged vegetables fruits | Organic Baby Spinach                          | 9784 |    1 |
+| packaged vegetables fruits | Organic Raspberries                           | 5546 |    2 |
+| packaged vegetables fruits | Organic Blueberries                           | 4966 |    3 |
+| baking ingredients         | Light Brown Sugar                             |  499 |    1 |
+| baking ingredients         | Pure Baking Soda                              |  387 |    2 |
+| baking ingredients         | Cane Sugar                                    |  336 |    3 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |   30 |    1 |
+| dog food care              | Organix Chicken & Brown Rice Recipe           |   28 |    2 |
+| dog food care              | Small Dog Biscuits                            |   26 |    3 |
+
+Below is a table showing the mean hour of the day at which Pink Lady
+Apples and Coffee Ice Cream are ordered on each day of the week. This
+table has been formatted in an untidy manner for human readers:
+
+``` r
+instacart %>%
+  filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>%
+  group_by(product_name, order_dow) %>%
+  summarize(mean_hour = mean(order_hour_of_day)) %>%
+  spread(key = order_dow, value = mean_hour) %>%
+  knitr::kable(digits = 2)
+```
+
+| product_name     |     0 |     1 |     2 |     3 |     4 |     5 |     6 |
+|:-----------------|------:|------:|------:|------:|------:|------:|------:|
+| Coffee Ice Cream | 13.77 | 14.32 | 15.38 | 15.32 | 15.22 | 12.26 | 13.83 |
+| Pink Lady Apples | 13.44 | 11.36 | 11.70 | 14.25 | 11.55 | 12.78 | 11.94 |
+
+Pink Lady Apples are generally purchased slightly earlier in the day
+than Coffee Ice Cream, with the exception of day 5.
 
 # Problem 2
 
