--- a/p8105_hw3_sef2183.md
+++ b/p8105_hw3_sef2183.md
@@ -125,17 +125,12 @@ than Coffee Ice Cream, with the exception of day 5.
 # Problem 2
 
 Below, the accelerometer data from `accel_data.csv` is read in and the
-variable names are cleaned using `clean_names()`. Then, `pivot_longer()`
-is used to manipulate the dataset from wide to long format. To do this,
-all variable names beginning with “activity” (`activity_1` to
-`activity_1440`) were transformed into 2 different variables: one
-denoting the minute of the day and one denoting the activity measure.The
-variable names were changed to `minute` and the prefix “activity\_” was
-removed so that the variable values contained only the minute number,
-and the values were changed to `activity_count`, indicating the amount
-of activity read by the accelerometer during each 1 minute window.
-Finally, a new variable called `weekday_weekend` was created to indicate
-whether the day of the week is a weekday or a weekend day.
+variable names are cleaned. Then, `pivot_longer()` is used to manipulate
+the dataset from wide to long format. To do this, all variable names
+beginning with “activity” (`activity_1` to `activity_1440`) were
+transformed into 2 different variables: one denoting the minute of the
+day and one denoting the activity measure. Finally, a new weekday
+vs. weekend variable was created.
 
 ``` r
 accel_df = 
@@ -153,8 +148,6 @@ accel_df =
                                      day == "Friday" ~ "weekday",
                                      day == "Saturday" ~ "weekend",
                                      day == "Sunday" ~ "weekend"))
-
-# What is meant by encode data with reasonable variable classes
 ```
 
 ## Dataset description
@@ -168,14 +161,12 @@ accel_df =
 ## Table of total activity over each day
 
 Below, the tidied accelerometer dataset was aggregated across minutes
-using `group_by()` to group the data together by the `day_id` variable.
-Then a `total_activity` variable was created by summing the
-`activity_count` variables for each 1 minute window throughout the day
-to indicate the total activity read by the accelerometer during each day
-of the study. Finally, only the relevant variables `day_id`, `week`,
-`day`, and `total_activity` were selected from the dataset using
-`select()` and a table was created to show the daily totals for each of
-the 35 days of the study using `kable()` from the `knitr` package.
+and grouped together by the `day_id` variable. Then a `total_activity`
+variable was created by summing the `activity_count` variables for each
+1 minute window throughout each day of the study. Finally, only the
+relevant variables were selected from the dataset and a table was
+created to show the daily totals for each of the 35 days of the study
+using `kable()`.
 
 ``` r
 accel_df %>%
@@ -235,12 +226,11 @@ accel_df %>%
 
 ## Plot of the 24-hour activity time courses for each day
 
-Below, a single panel-plot was created using `ggplot()` to show the
-24-hour activity time courses for each day, using color to indicate the
-day of the week. `group_by()` was used to group the data by day of the
-week, then `ggplot()` was called to create a scatterplot with `minute`
-on the x axis and `activity_count` (data read from the accelerometer in
-1 minute intervals) on the y axis.
+Below is a single panel-plot showing the 24-hour activity time courses
+for each day, using color to indicate the day of the week. The data was
+grouped by day of the week, then `ggplot()` was called to create a
+scatterplot with `minute` on the x axis and `activity_count` (data read
+from the accelerometer in 1 minute intervals) on the y axis.
 
 ``` r
 accel_df %>%
@@ -311,8 +301,6 @@ sum(is.na(ny_noaa$tmax))
 ## [1] 1134358
 sum(is.na(ny_noaa$tmin))
 ## [1] 1134420
-
-# MAYBE USE PULL INSTEAD HERE?
 ```
 
 -   There are 145,838 missing observations for `prcp`
@@ -330,16 +318,14 @@ Therefore, missing data will be more of a problem for analyses involving
 variables in the dataset.
 
 Below, a dataframe is created from the `ny_noaa` dataset and the
-variable names are cleaned using the `clean_names()` function from the
-`janitor` package. Then, separate variables for `year`, `month`, and
-`day` were created by separating the `date` variable using `separate()`
-and indicating “-” as the delimiter. Then, `mutate()` was used on `tmax`
-and `tmin` first to convert them to numeric variables using
-`as.numeric()`, and then to convert `tmax`, `tmin`, and `prcp` to
-reasonable units. In the description of the original `ny_noaa` dataset,
-`tmax`, `tmin`, and `prcp` were reported in tenths of mm and tenths of
-degrees Celsius, which is not very easy to interpret. Therefore, the
-values were divided by 10 so the variables were in reasonable units.
+variable names are cleaned and separate variables for `year`, `month`,
+and `day` were created by separating the `date` variable. Then, `tmax`
+and `tmin` were converted to numeric variables and `tmax`, `tmin`, and
+`prcp` were converted to reasonable units. In the description of the
+original `ny_noaa` dataset, `tmax`, `tmin`, and `prcp` were reported in
+tenths of mm and tenths of degrees Celsius, which is not very easy to
+interpret. Therefore, the values were divided by 10 so the variables
+were in reasonable units.
 
 ``` r
 ny_noaa_df = 
@@ -354,8 +340,6 @@ ny_noaa_df =
     tmin = tmin / 10,
     tmax = tmax / 10) 
 ```
-
-MAYBE NEED TO REMOVE VALUES OF LESS THAN 0 AT THE END OF THIS STEP
 
 ## Dataset questions:
 
@@ -685,30 +669,24 @@ during the winter in New York state, it is not snowing for the majority
 of the year. This results in many values of 0 for the amount of snowfall
 for dates during the spring, summer, and fall months.
 
-\*\*\*\*NOTE: Running this analysis revealed that there is 1 record with
-a value of -13 for `snow`. This indicates that the dataset may require
+NOTE: Running this analysis revealed that there is 1 record with a value
+of -13 for `snow`. This indicates that the dataset may require
 additional cleaning, as this value is outside of the reasonable range
-because the amount of snowfall cannot be less than 0. CHECK ON THIS
-ABOVE
+because the amount of snowfall cannot be less than 0.
 
 ## Plot of average max temperature in January and in July in each station across years
 
 Below, a two-panel scatterplot depicting the average maximum temperature
 in the months of January and in July in each station across years are
 side by side. To create the plot, separate objects were created for the
-January and July plots using the `filter()` function for month values of
-“01” or “07”. Additionally, `id`, `year`, and `month` were grouped
-together using `group_by()` in order to calculate the mean of `tmax` for
-every unique combination of those 3 variables. A new `mean_tmax`
-variable was created using `mean()` within the `mutate()` function in
-combination with the grouping stated previously to calculate the mean
-maximum temperature for each station separately across each year. Then,
-`ggplot()` was used to plot points with `year` on the x axis and
-`mean_max` on the y axis. `theme()` was used to rotate the text on the x
-axis to make it easier to read and the legend was surpressed because the
-700 stations made it too large. Finally, a short title was added to each
-plot using `ggtitle()` and then the two plots were arranged side by
-side.
+January and July plots. `id`, `year`, and `month` were grouped together
+in order to calculate the mean of `tmax` for every unique combination of
+those 3 variables. A new `mean_tmax` variable was created to calculate
+the mean maximum temperature for each station separately across each
+year. Then, `ggplot()` was used to plot points with `year` on the x axis
+and `mean_max` on the y axis. `theme()` was used to rotate the text on
+the x axis to make it easier to read and the legend was surpressed
+because the 700 stations made it too large.
 
 ``` r
 jan_tmax_point = 
@@ -784,12 +762,11 @@ snowfall values greater than 0 and less than 100 are displayed side by
 side. For the first plot, an object was created and `ggplot()` was used
 to plot the maximum temperatures against the minimum temperatures in the
 entire dataset. Rather than a scatterplot, a hexagonal heatmap was
-created using `geom_hex()` to display the density coloring of the data
-points. For the second plot, the dataset was filtered to include only
-extreme values of snowfall less than 0 and greater than 100 using
-`filter()`, and grouped by year using `group_by()`. `ggplot()` was used
-to create a distribution (density) plot using `geom_violin()`. Finally,
-the two panels were plotted side by side.
+created to display the density coloring of the data points. For the
+second plot, the dataset was filtered to include only extreme values of
+snowfall less than 0 and greater than 100 and grouped by year.
+`ggplot()` was used to create a distribution (density) plot using
+`geom_violin()`.
 
 ``` r
 i_p = ny_noaa_df %>%
