--- a/p8105_hw3_sef2183.Rmd
+++ b/p8105_hw3_sef2183.Rmd
@@ -80,7 +80,7 @@ instacart %>%
 Pink Lady Apples are generally purchased slightly earlier in the day than Coffee Ice Cream, with the exception of day 5.
 
 # Problem 2
-Below, the accelerometer data from `accel_data.csv` is read in and the variable names are cleaned using `clean_names()`. Then, `pivot_longer()` is used to manipulate the dataset from wide to long format. To do this, all variable names beginning with "activity" (`activity_1` to `activity_1440`) were transformed into 2 different variables: one denoting the minute of the day and one denoting the activity measure.The variable names were changed to `minute` and the prefix "activity_" was removed so that the variable values contained only the minute number, and the values were changed to `activity_count`, indicating the amount of activity read by the accelerometer during each 1 minute window. Finally, a new variable called `weekday_weekend` was created to indicate whether the day of the week is a weekday or a weekend day. 
+Below, the accelerometer data from `accel_data.csv` is read in and the variable names are cleaned. Then, `pivot_longer()` is used to manipulate the dataset from wide to long format. To do this, all variable names beginning with "activity" (`activity_1` to `activity_1440`) were transformed into 2 different variables: one denoting the minute of the day and one denoting the activity measure. Finally, a new weekday vs. weekend variable was created. 
 
 ```{r read and manipulate problem 2 data}
 accel_df = 
@@ -98,8 +98,6 @@ accel_df =
                                      day == "Friday" ~ "weekday",
                                      day == "Saturday" ~ "weekend",
                                      day == "Sunday" ~ "weekend"))
-
-# What is meant by encode data with reasonable variable classes
 ```
 
 ## Dataset description
@@ -107,7 +105,7 @@ accel_df =
 * The resulting dataset contains `r nrow(accel_df)` rows/observations and `r ncol(accel_df)` columns/variables.
 
 ## Table of total activity over each day
-Below, the tidied accelerometer dataset was aggregated across minutes using `group_by()` to group the data together by the `day_id` variable. Then a `total_activity` variable was created by summing the `activity_count` variables for each 1 minute window throughout the day to indicate the total activity read by the accelerometer during each day of the study. Finally, only the relevant variables `day_id`, `week`, `day`, and `total_activity` were selected from the dataset using `select()` and a table was created to show the daily totals for each of the 35 days of the study using `kable()` from the `knitr` package. 
+Below, the tidied accelerometer dataset was aggregated across minutes and grouped together by the `day_id` variable. Then a `total_activity` variable was created by summing the `activity_count` variables for each 1 minute window throughout each day of the study. Finally, only the relevant variables were selected from the dataset and a table was created to show the daily totals for each of the 35 days of the study using `kable()`.
 
 ```{r problem 2 total activity table}
 accel_df %>%
@@ -121,7 +119,7 @@ accel_df %>%
 * It's very difficult to see any trends that are apparent from this table. I immediately noticed that the last 2 Saturdays in the study (days 24 and 31) had a much lower total activity count than the other days in the study. However, the previous Saturdays in the study had relatively similar total activity counts to the rest of the days in the study, so this isn't a trend that can be seen through the entire dataset. Visualization may be required to see any trends, if they are apparent in this dataset. 
 
 ## Plot of the 24-hour activity time courses for each day 
-Below, a single panel-plot was created using `ggplot()` to show the 24-hour activity time courses for each day, using color to indicate the day of the week. `group_by()` was used to group the data by day of the week, then `ggplot()` was called to create a scatterplot with `minute` on the x axis and `activity_count` (data read from the accelerometer in 1 minute intervals) on the y axis.
+Below is a single panel-plot showing the 24-hour activity time courses for each day, using color to indicate the day of the week. The data was grouped by day of the week, then `ggplot()` was called to create a scatterplot with `minute` on the x axis and `activity_count` (data read from the accelerometer in 1 minute intervals) on the y axis.
 
 ```{r problem 2 plot}
 accel_df %>%
@@ -159,8 +157,6 @@ sum(is.na(ny_noaa$snow))
 sum(is.na(ny_noaa$snwd))
 sum(is.na(ny_noaa$tmax))
 sum(is.na(ny_noaa$tmin))
-
-# MAYBE USE PULL INSTEAD HERE?
 ```
 
 * There are 145,838 missing observations for `prcp`
@@ -171,7 +167,7 @@ sum(is.na(ny_noaa$tmin))
 
 It's worth noting that the `tmax` and `tmin` variables have the most missing observations, and `prcp` has the least number of missing observations. This alligns with the dataset description which stated that about one half of the stations report precipitation only. Therefore, missing data will be more of a problem for analyses involving `tmax` and `tmin`, but less of a problem for analyses with the other variables in the dataset.
 
-Below, a dataframe is created from the `ny_noaa` dataset  and the variable names are cleaned using the `clean_names()` function from the `janitor` package. Then, separate variables for `year`, `month`, and `day` were created by separating the `date` variable using `separate()` and indicating "-" as the delimiter. Then, `mutate()` was used on `tmax` and `tmin` first to convert them to numeric variables using `as.numeric()`, and then to convert `tmax`, `tmin`, and `prcp` to reasonable units. In the description of the original `ny_noaa` dataset, `tmax`, `tmin`, and `prcp` were reported in tenths of mm and tenths of degrees Celsius, which is not very easy to interpret. Therefore, the values were divided by 10 so the variables were in  reasonable units. 
+Below, a dataframe is created from the `ny_noaa` dataset  and the variable names are cleaned and separate variables for `year`, `month`, and `day` were created by separating the `date` variable. Then, `tmax` and `tmin` were converted to numeric variables and `tmax`, `tmin`, and `prcp` were converted to reasonable units. In the description of the original `ny_noaa` dataset, `tmax`, `tmin`, and `prcp` were reported in tenths of mm and tenths of degrees Celsius, which is not very easy to interpret. Therefore, the values were divided by 10 so the variables were in  reasonable units.
 
 ```{r manipulate problem 3 data}
 ny_noaa_df = 
@@ -187,13 +183,12 @@ ny_noaa_df =
     tmax = tmax / 10) 
 ```
 
-MAYBE NEED TO REMOVE VALUES OF LESS THAN 0 AT THE END OF THIS STEP
-
 ## Dataset questions:
 ### Most common values of snowfall
 #### Distribution histogram
 
 Below is a distribution histogram of values for the snowfall variable `snow` using `ggplot()`, with values for `snow` on the x axis and a count on the y axis:
+
 ```{r problem 3 snowfall plot}
 ggplot(ny_noaa_df, aes(x = snow)) + geom_histogram()
 ```
@@ -201,6 +196,7 @@ ggplot(ny_noaa_df, aes(x = snow)) + geom_histogram()
 #### Table
 
 Below is a table denoting the counts for each value of the snowfall variable `snow` using `count()` and the `kable()` function from the `knitr` package to create the table: 
+
 ```{r problem 3 snowfall count}
 ny_noaa_df %>%
   count(snow, name = "count") %>% 
@@ -209,11 +205,11 @@ ny_noaa_df %>%
 
 From both the distribution histogram of snowfall and the table with the counts for each value of snowfall, the most commonly observed value of snowfall is 0, with a count of 2,008,508. The second most common value is NA with a count of 381,221. The reason that NA is a commonly observed value for `snow` is because about one half of the stations report precipitation only, and do not report data on the other weather variables including `snow`. This results in many missing or "NA" observations for `snow`. Additionally, the reason that 0 is the most commonly observed value for `snow` is because the dataset contains data from New York state weather stations only. While it does snow sometimes during the winter in New York state, it is not snowing for the majority of the year. This results in many values of 0 for the amount of snowfall for dates during the spring, summer, and fall months. 
 
-****NOTE: Running this analysis revealed that there is 1 record with a value of -13 for `snow`. This indicates that the dataset may require additional cleaning, as this value is outside of the reasonable range because the amount of snowfall cannot be less than 0. CHECK ON THIS ABOVE
+NOTE: Running this analysis revealed that there is 1 record with a value of -13 for `snow`. This indicates that the dataset may require additional cleaning, as this value is outside of the reasonable range because the amount of snowfall cannot be less than 0. 
 
 ## Plot of average max temperature in January and in July in each station across years
 
-Below, a two-panel scatterplot depicting the average maximum temperature in the months of January and in July in each station across years are side by side. To create the plot, separate objects were created for the January and July plots using the `filter()` function for month values of "01" or "07". Additionally, `id`, `year`, and `month` were grouped together using `group_by()` in order to calculate the mean of `tmax` for every unique combination of those 3 variables. A new `mean_tmax` variable was created using `mean()` within the `mutate()` function in combination with the grouping stated previously to calculate the mean maximum temperature for each station separately across each year. Then, `ggplot()` was used to plot points with `year` on the x axis and `mean_max` on the y axis. `theme()` was used to rotate the text on the x axis to make it easier to read and the legend was surpressed because the 700 stations made it too large. Finally, a short title was added to each plot using `ggtitle()` and then the two plots were arranged side by side.
+Below, a two-panel scatterplot depicting the average maximum temperature in the months of January and in July in each station across years are side by side. To create the plot, separate objects were created for the January and July plots. `id`, `year`, and `month` were grouped together in order to calculate the mean of `tmax` for every unique combination of those 3 variables. A new `mean_tmax` variable was created to calculate the mean maximum temperature for each station separately across each year. Then, `ggplot()` was used to plot points with `year` on the x axis and `mean_max` on the y axis. `theme()` was used to rotate the text on the x axis to make it easier to read and the legend was surpressed because the 700 stations made it too large.
 
 ```{r problem 3 max temp geom point plots}
 jan_tmax_point = 
@@ -264,7 +260,7 @@ jan_tmax_line + jul_tmax_line
 
 ## Plot of tmax vs tmin for the full dataset (panel 1) and the distribution of snowfall values greater than 0 and less than 100 separately by year (panel 2)
 
-Below, a two-panel plot depicting the minimum temperature vs. the maximum temperature for the full dataset as well as the distribution of snowfall values greater than 0 and less than 100 are displayed side by side. For the first plot, an object was created and `ggplot()` was used to plot the maximum temperatures against the minimum temperatures in the entire dataset. Rather than a scatterplot, a hexagonal heatmap was created using `geom_hex()` to display the density coloring of the data points. For the second plot, the dataset was filtered to include only extreme values of snowfall less than 0 and greater than 100 using `filter()`, and grouped by year using `group_by()`. `ggplot()` was used to create a  distribution (density) plot using `geom_violin()`. Finally, the two panels were plotted side by side.
+Below, a two-panel plot depicting the minimum temperature vs. the maximum temperature for the full dataset as well as the distribution of snowfall values greater than 0 and less than 100 are displayed side by side. For the first plot, an object was created and `ggplot()` was used to plot the maximum temperatures against the minimum temperatures in the entire dataset. Rather than a scatterplot, a hexagonal heatmap was created to display the density coloring of the data points. For the second plot, the dataset was filtered to include only extreme values of snowfall less than 0 and greater than 100 and grouped by year. `ggplot()` was used to create a  distribution (density) plot using `geom_violin()`.
 
 ```{r problem 3 tmax vs tmin and snowfall plots}
 i_p = ny_noaa_df %>%
